<resources>
    <string name="app_name">Aula04_CheckRadioSwitchToogle</string>
    <string name="vermelho">vermelho</string>
    <string name="verde">verde</string>
    <string name="azul">azul</string>
    <string name="masculino">masculino</string>
    <string name="feminino">feminino</string>
    <string name="enviar">enviar</string>
    <string name="limpar">limpar</string>
    <string name="textoCheckBoxRadioButton">Texto CheckBox RadioButton</string>
    <string name="textoSwitch">Texto Switch</string>
    <string name="textoToggle">Texto Toggle</string>
</resources>