<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:orientation="vertical">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
                android:text="@string/vermelho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/vermelho" android:layout_weight="1"/>
        <CheckBox
                android:text="@string/verde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/verde" android:layout_weight="1"/>
        <CheckBox
                android:text="@string/azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/azul" android:layout_weight="1"/>
    </LinearLayout>
    <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupSexo">
        <RadioButton
                android:text="@string/masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/masculino" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/feminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/feminino" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/botaoEnviar"/>
    <Button
            android:text="@string/limpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/botaoLimpar"/>
    <TextView
            android:text="@string/textoCheckBoxRadioButton"
            android:layout_width="match_parent"
            android:layout_height="60dp" android:id="@+id/textoCheckBoxRadioButton" android:gravity="center"/>
    <Switch
            android:text="Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/botaoSwitch"/>
    <TextView
            android:text="@string/textoSwitch"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/textoSwitch" android:gravity="center"/>
    <ToggleButton
            android:text="ToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/botaoToggle"/>
    <TextView
            android:text="@string/textoToggle"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:id="@+id/textoToggle" android:gravity="center"/>

</LinearLayout>